complete #M84 @0h10m Aggiornata gestione classi senza AccessController.